fix: columns too wide on mobile

--- a/theme/styles/common/somaci.scss
+++ b/theme/styles/common/somaci.scss
@@ -9,7 +9,7 @@
 // Unfortunately, this makes certain changes (like changing the gutter between
 // columns) rather challenging as we'd need to override most of the default
 // styles.
-.comaci {
+.somaci {
 	// The gutter between columns (this is set by WordPress' styles)
 	$wp-column-gutter: 32px;
 
